--- a/v2.html
+++ b/v2.html
@@ -1,9 +1,12 @@
+        <!-- bxSlider Javascript file -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <!-- bxSlider Javascript file -->
         <script src="/js/jquery.bxslider.min.js"></script>
         <link href="/lib/jquery.bxslider.css" rel="stylesheet" />
+        <!-- bxSlider CSS file -->
 
         <script>
             $(window).load(function() {
                 $('.bxslider').bxslider();
             });
-        </script>  
+        </script>
